// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders block 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button-0-2-1 button_regular-0-2-9 button_block-0-2-2"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders borderless 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button-0-2-1 button_regular-0-2-9 button_inverted-0-2-6 button_borderless-0-2-3"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders disabled 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button-0-2-1 button_regular-0-2-9 button_disabled-0-2-4"
  disabled={true}
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders inverted 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button-0-2-1 button_regular-0-2-9 button_inverted-0-2-6"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders large 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button-0-2-1 button_large-0-2-10"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders loading 1`] = `
<ButtonOrLink
  aria-busy={true}
  className="button-0-2-1 button_regular-0-2-9 button_disabled-0-2-4 button_loading-0-2-7"
  loading={true}
>
  <Loader
    inline={true}
    inverted={true}
  />
</ButtonOrLink>
`;

exports[`<Button /> renders small 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button-0-2-1 button_small-0-2-8"
>
  Button
</ButtonOrLink>
`;
